# stanmerge

./: .gitmodules  LICENSE  README.md  dune-project  stanmerge.opam
examples/gaussian_process/: README.md  analysis.R  config.json  generate_model.sh  generate_model.stan  gp.stan  model.stan
examples/hierarchical_models/: analysis.R  common_data.stan  data_model.stan  generate_models.sh  no_pooling.stan  partial_pooling.stan
examples/location_scale/: data_model_normal.stan  data_model_robust.stan  model.stan
lib/: dune
src/merge/: Merge.ml  dune
src/transform/: Merge.ml  Rename.ml  dune
test/: dune
